@@ -1,6 +1,12 @@
+2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* dbfopen.c: DBFCreateField() can now also operate on files with
+	records, c/o Martin Dobias. 
+	https://trac.osgeo.org/gdal/ticket/2672
+
 2008-11-11  Frank Warmerdam  <warmerdam@pobox.com>
 
-	* Introduce DBFDeleteField() function from Martin Dobias.
+	* dbfopen.c: Introduce DBFDeleteField() function from Martin Dobias.
 	http://trac.osgeo.org/gdal/ticket/2671
 
 2008-03-14  Frank Warmerdam  <warmerdam@pobox.com>
